--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
                     channel: "Global Web Analytics Test"
                 },
                 page: {
-                    name: "customInteraction Test Page"
+                    name: "customv Interaction Test Page"
                 },
                 customInteraction: {}
             };
